The fonts with the different types of lists

--- a/hello.html
+++ b/hello.html
@@ -11,5 +11,17 @@
     <h5> This is the second-smallest headline </h5>
     <h6> This is the smallest headline </h6>
 
+    An unordered list
+    <ul>
+      <li> One item </li>
+      <li> Another item </li>
+      <li> Yet another item </li>
+    </ul>
+    An ordered list
+    <ol>
+      <li> First item </li>
+      <li> Second item </li>
+      <li> Third item </li>
+    </ol>
   </body>
 </html>
