--- a/hello.html
+++ b/hello.html
@@ -4,24 +4,7 @@
     <title> My Webpage </title>
   </head>
   <body>
-    <h1> This is the largest headline </h1>
-    <h2> This is also a large headline </h2>
-    <h3> This is slightly smaller headline </h3>
-    <h4> This is an even smaller headline </h4>
-    <h5> This is the second-smallest headline </h5>
-    <h6> This is the smallest headline </h6>
-
-    An unordered list
-    <ul>
-      <li> One item </li>
-      <li> Another item </li>
-      <li> Yet another item </li>
-    </ul>
-    An ordered list
-    <ol>
-      <li> First item </li>
-      <li> Second item </li>
-      <li> Third item </li>
-    </ol>
+    Hello World! Hello again! Hello, hello, hello!
+ 
   </body>
 </html>
